# desktop-widget

./: .gitignore  Cargo.toml  README-zh.md  README.md  photo_widget_config.json
src/: main.rs
wix/: main.wxs
