[package]
name = "desktop_widget"
version = "0.1.0"
edition = "2024"
authors = ["Kevin kevin3627713@gmail.com"]
license = "Apache-2.0"

[dependencies]
eframe = "0.23.0"
egui = "0.23.0"
image = "0.24.7"
rand = "0.8.5"
rfd = "0.11.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tray-icon = "0.8.3"
walkdir = "2.3.3"
# 添加下面这一行来解决编译错误
winapi = { version = "0.3.9", features = ["winuser", "windef"] }
winit = "0.28.0"

[build-dependencies]
embed-resource = "2.1"

[profile.release]
opt-level = "z"     # 优化等级，"z" 表示尽可能优化体积
lto = true          # 启用链接时优化 (Link-Time Optimization)，可以跨 crate 删除未使用的代码
codegen-units = 1   # 将所有代码编译成一个单元，增加优化机会
panic = "abort"     # 遇到 panic 时直接终止程序，而不是生成复杂的堆栈展开代码
strip = true        # 自动剥离符号信息，类似于手动运行 `strip` 命令

[package.metadata.wix]
# 升级 GUID: 用于标识你的产品系列，升级时会用到。
upgrade-guid = "8fad5c56-fa5f-404c-b022-2d809625a427"
# 路径组件 GUID: 用于标识安装路径。
path-guid = "1f492f51-6aac-45d6-957a-6ac9e364dd61"